# omni-ai-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt  run.py  setup.sh
.claude-plugin/: plugin.json
.claude/agents/: cowork.md  gemini-analyzer.md  gemini-researcher.md  model-orchestrator.md
.claude/commands/: ask-model.md  cowork.md  gemini-analyze.md  gemini-brainstorm.md  gemini-challenge.md  gemini-illustrate.md  gemini-image.md  gemini-models.md  gemini-research.md  gemini-review.md  gemini.md  setup.md
.github/workflows/: publish.yml  test.yml
app/: __init__.py  cli.py  server.py
app/core/: config.py  logging.py
app/services/: __init__.py  gemini.py  model_registry.py  openrouter.py  persistence.py
app/tools/media/: analyze_image.py  generate_image.py
app/tools/rag/: file_search.py
app/tools/text/: __init__.py  ask_model.py  challenge.py  models.py
app/tools/web/: deep_research.py
scripts/: build_dxt.sh  build_mcpb.sh  build_plugin.sh  bump_version.sh
tests/: README.md  conftest.py
tests/integration/: test_fastmcp_server.py
tests/integration/real_outputs/: 11_rag_tools.txt
tests/unit/: test_add_line_numbers.py  test_ask_model.py  test_expand_file_references.py  test_model_registry.py  test_openrouter_client.py  test_parse_generated_code.py  test_pydantic_schemas.py  test_safe_write.py  test_secrets_sanitizer.py  test_validate_path.py
